<resources>
    <string name="app_name">Мой авто</string>
    <string name="auto">Авто</string>
    <string name="photo">Фото</string>
    <string name="model">Модель</string>
    <string name="power">Мощность</string>
    <string name="mileage_in_km">Пробег (км)</string>
    <string name="mileage">Пробег</string>
    <string name="add_new_car">Добавить новый автомобиль</string>
    <string name="add">Добавить</string>
    <string name="brand">Марка</string>
    <string name="generation">Поколение</string>
    <string name="equipment">Комплектация</string>
    <string name="transmission">Трансмиссия</string>
    <string name="engine">Двигатель</string>
    <string name="fuel">Топливо</string>
    <string name="drive">Привод</string>
    <string name="body">Кузов</string>
    <string name="color">Цвет</string>
    <string name="wheel">Руль</string>
    <string name="vin">VIN</string>
    <string name="service">Сервис</string>
    <string name="brand_colon">Марка:</string>
    <string name="model_colon">Модель:</string>
    <string name="generation_colon">Поколение:</string>
    <string name="equipment_colon">Комплектация:</string>
    <string name="transmission_colon">Трансмиссия:</string>
    <string name="engine_colon">Двигатель:</string>
    <string name="fuel_colon">Топливо:</string>
    <string name="drive_colon">Привод:</string>
    <string name="body_colon">Кузов:</string>
    <string name="color_colon">Цвет:</string>
    <string name="wheel_colon">Руль:</string>
    <string name="vin_colon">VIN:</string>
    <string name="mileage_colon">Пробег:</string>
    <string name="change">Изменить информацию</string>
    <string name="delete">Удалить</string>
    <string name="details">Детали</string>
    <string name="add_details">Добавить детали</string>
    <string name="expendables">Расходники</string>
    <string name="add_expendables">Добавить расходники</string>
    <string name="input_count">Введите количество</string>
    <string name="date">Дата</string>
    <string name="date_pattern">Дата (дд/мм/гггг)</string>
    <string name="cost">Стоимость</string>
    <string name="work_name">Работа (краткое наименование поездки до 20 символов)</string>
    <string name="work">Работа</string>
    <string name="add_new_tm">Добавить новое ТО</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="password_repeat">Повторите пароль</string>
    <string name="entry">Войти</string>
    <string name="registration">Регистрация</string>
    <string name="save">Сохранить</string>
</resources>