<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/Auto"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/auto"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/Work"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/work"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/Date"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/date"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/Cost"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/cost"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="15dp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>