<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddServiceActivity">

    <TextView
        android:id="@+id/tvAppName"
        style="@style/Header"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAppName"
        app:srcCompat="@drawable/logo" />


    <TextView
        android:id="@+id/tvHeader"
        style="@style/Header"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/service"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        tools:ignore="SpUsage" />

    <LinearLayout
        android:id="@+id/llData"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/btnAdd"
        app:layout_constraintTop_toBottomOf="@id/tvHeader">

        <RelativeLayout
            android:id="@+id/rlUp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/tvDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/details"
                android:textAlignment="center" />

            <ListView
                android:id="@+id/lvDetails"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_below="@id/tvDetails"
                tools:ignore="UsingOnClickInXml" />

            <android.widget.Button
                android:id="@+id/btnAddDetails"
                style="@style/Button"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_below="@id/lvDetails"
                android:layout_centerHorizontal="true"
                android:text="@string/add_details" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlDown"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/tvExpendables"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/expendables"
                android:textAlignment="center" />

            <ListView
                android:id="@+id/lvExpendables"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_below="@id/tvExpendables"
                tools:ignore="UsingOnClickInXml" />

            <android.widget.Button
                android:id="@+id/btnAddExpendables"
                style="@style/Button"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_below="@id/lvExpendables"
                android:layout_centerHorizontal="true"
                android:text="@string/add_expendables" />

        </RelativeLayout>
    </LinearLayout>

    <android.widget.Button
        android:id="@+id/btnAdd"
        style="@style/Button"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginVertical="30dp"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llData" />

</androidx.constraintlayout.widget.ConstraintLayout>