<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ServiceShowActivity">

    <TextView
        android:id="@+id/header"
        style="@style/Header"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:srcCompat="@drawable/logo" />

    <LinearLayout
        android:id="@+id/llHeader"
        style="@style/Header"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toTopOf="@id/rlData"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/auto"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="15dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/work"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="15dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/date"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="15dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cost"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="15dp"
            android:textStyle="bold" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rlData"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/btnAdd"
        app:layout_constraintTop_toBottomOf="@id/llHeader">

        <ListView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="2dp"
            tools:ignore="UsingOnClickInXml" />

        <ProgressBar
            android:id="@+id/pbWait"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp" />
    </RelativeLayout>

    <android.widget.Button
        android:id="@+id/btnAdd"
        style="@style/Button"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginVertical="30dp"
        android:text="@string/add_new_tm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rlData" />

</androidx.constraintlayout.widget.ConstraintLayout>